--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1073.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "env-cmd": "^10.1.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
   }
